--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href ="#" target="blank" class ="header_links"> Gmail</a></li>
                 <li><a href ="#" target="blank" class ="header_links">Images</a></li>
-                <li><a href ="#" target="blank" class ="material-icons">apps</a></li>
+                <li><a href ="#" target="blank" class ="material-icons">Apps</a></li>
                 <li><a href ="#" target="blank"><img  class ="icon" src = "https://lh3.googleusercontent.com/ogw/ADGmqu8gbhyOiM5GcKpwR0Q9Q0CqlGsdSrqnEDFwmKcTEg=s32-c-mo"> </a></li>
               </ul>
         </div>
