--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
 
         </footer>
 
-        <footer class ="lower_footer" style = "padding-right:27px;"> 
+        <footer class ="lower_footer"> 
 
+            <nav class ="nav_bar_text"> 
 
             <ul class="left" style ="text-align:left;">
                 <li><a href ="#" target="blank" class ="f_text">Advertising</a></li>
@@ -70,7 +71,7 @@
                 
               </ul> 
 
-            <ul class="right">
+            <ul class="right" >
                 <li><a href ="#" target="blank" class ="f_text">Privacy</a></li>
                 <li><a href ="#" target="blank"class ="f_text">Terms</a></li>
                 <li><a href ="#" target="none" class ="f_text">Settings</a></li>
@@ -78,7 +79,7 @@
               </ul> 
 
              
-
+            </nav>
 
             </footer>
 
